# JustAnotherExpenseManager

./: .coveragerc  .dockerignore  .env  .flake8  .flaskenv  .gitignore  .gitignore-tests  .pylintrc  AGENTS.md  DATABASE_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.mysql.yml  docker-compose.postgres.yml  docker-compose.yml  env.example  generate_test_data.py  package-lock.json  package.json  playwright.config.js  playwright.config.ts  pyproject.toml  requirements.txt  run_manual_tests.py  sample_transactions.csv  test-split.js  test-split.spec.ts  test.env  test_app.py  tsconfig.json  tsconfig.static.json  vite.config.ts
.github/workflows/: ossar.yml  playwright.yml  publish.yml  pylint.yml  pysa.yml  pytest.yml  tests.yml
JustAnotherExpenseManager/: __init__.py  config.py
JustAnotherExpenseManager/models/: __init__.py  dtos.py
JustAnotherExpenseManager/routes/: categories.py  recurring.py  settings.py  stats.py  transactions.py
JustAnotherExpenseManager/static/css/: split_bill.css  styles.css
JustAnotherExpenseManager/static/js/: filter_component.js  recurring.js  settings.js  shared-Dkp2Sup-.js  split_bill.js  stats.js  transactions.js  types.js
JustAnotherExpenseManager/static/js/js/: filter_component.js  settings.js  stats.js  transactions.js  types.js
JustAnotherExpenseManager/templates/: base.html  filter_component.html  recurring.html  settings.html  split_bill_component.html  stats.html  summary.html  transactions.html  transactions_list.html
JustAnotherExpenseManager/utils/: database.py  sample_data.py  scheduler.py  services.py  test_data.py
models/: __init__.py
routes/: categories.py  settings.py  stats.py  transactions.py
static/css/: styles.css
static/js/: filter_component.js  stats.js  transactions.js
static_src/js/: filter_component.ts  recurring.ts  settings.ts  split_bill.ts  stats.ts  transactions.ts  types.ts
templates/: base.html  filter_component.html  settings.html  stats.html  summary.html  transactions.html  transactions_list.html
tests/: 01-navigation.spec.js  01-navigation.spec.ts  02-transactions.spec.js  02-transactions.spec.ts  03-csv-import.spec.js  03-csv-import.spec.ts  04-filters-stats.spec.js  04-filters-stats.spec.ts  05-category-management.spec.js  05-category-management.spec.ts  06-security.spec.js  06-security.spec.ts  07-filter-combinations.spec.js  07-filter-combinations.spec.ts  07-mobile.spec.js  08-accessibility.spec.js  08-unicode-categories.spec.js  08-unicode-categories.spec.ts  09-monthly-totals.spec.js  09-monthly-totals.spec.ts  10-reorder.spec.ts  11-split-bill.spec.ts  12-recurring-transactions.spec.ts  conftest.py  fixtures.ts  helpers.ts  test_app.py  test_database.py  test_integration.py  test_models.py  test_recurring.py  test_routes.py  test_services.py
tests/pages/: FilterComponent.ts  RecurringPage.ts  SettingsPage.ts  SplitBillComponent.ts  SummaryPage.ts  TransactionsPage.ts  base.ts
utils/: database.py  services.py
